[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
anyhow = "1.0.56"
base64 = "0.13.0"
bytes = "1.1.0"
image = "0.24.1"
lazy_static = "1.4.0"
lru = "0.7.3"
percent-encoding = "2.1.0"
photon-rs = "0.3.1"
prost = "0.8"
reqwest = "0.11.9"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.2", features = ["add-extension", "compression-full", "trace"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"

[build-dependencies]
prost-build = "0.9.0"